Bug 22891 - 'commit' button is cramped vertically when viewing bugs
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@72162 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/tools/bugzilla-3.6.2/skins/custom/show_bug.css
+++ b/tools/bugzilla-3.6.2/skins/custom/show_bug.css
@@ -4,7 +4,7 @@
 
 .bz_alias_short_desc_container {
     margin: 8px 0; 
-    padding: 0.3em; 
+    padding: 0.2em 0.2em 0.3em 0.5em; 
     background-color: #E0E0E0; 
     border-collapse: collapse;
     border: 1px solid silver !important;
